# unmake_cli_workspace

./: Cargo.toml  compose.yml  ucw.config.json
src/: main.rs
src/core/: generate.rs  mod.rs  progress_bar.rs
src/core/config/: config.rs
src/core/docker/: docker.rs  docker_item.rs
src/core/docker/templates/: minio.json  postgresql.json
src/core/git/: github.rs
src/core/javascript/: package_manager.rs
src/core/project/: project.rs
src/generators/ci_cd/: ci_cd.rs  mod.rs
src/generators/docker/: mod.rs
src/generators/git/: gitlab.rs
src/generators/javascript/: mod.rs
src/generators/javascript/frameworks/: mod.rs  nest.rs
