[package]
name = "unmake_cli_workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0.201", features = ["derive"] }
chrono = "0.4.38"
colored = "2.1.0"
